--- a/hotels/templates/hotels/hotel_list.html
+++ b/hotels/templates/hotels/hotel_list.html
@@ -1,13 +1,22 @@
+{% extends 'base.html' %}
+
+{% block title %}Bienvenue a Bookings.com{% endblock %}
+
+{% block content %}
 <h1>Liste des hotels</h1>
 
 <ul>
     {% for hotel in object_list %}
         <li>
 		<a href="{% url 'hotel-detail' pk=hotel.id %}">
-			{{ hotel.nom }}
+			{{ hotel.nom|upper }}
 		</a>
-		: {{ hotel.etoiles }} etoiles</li>
+		: {{ hotel.etoiles }} etoiles
+        <p>{{ hotel.description|truncatewords:"50" }}</p>
+        </li>
     {% endfor %}
 </ul>
 
 <a href="{% url 'hotel-create' %}">Nouveau</a>
+
+{% endblock %}
