--- a/hotels/templates/base.html
+++ b/hotels/templates/base.html
@@ -52,7 +52,7 @@
                         <a href="#">Services</a>
                     </li>
                     <li>
-                        <a href="{% url 'contact' %}">Contact</a>
+                        <a href="#">Contact</a>
                     </li>
                 </ul>
             </div>
