--- a/hotels/templates/hotels/hotel_detail.html
+++ b/hotels/templates/hotels/hotel_detail.html
@@ -27,7 +27,7 @@
             <div class="well">
 
                 <div class="text-right">
-                    <a class="btn btn-success">Leave a Review</a>
+                    <a class="btn btn-success" href="{% url 'reservation-create' hotel_id=object.id %}">Leave a Review</a>
                 </div>
 
                 <hr>
